Fix: layout issue show recipes page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ button, .anchor-btn {
 .btn-small, .anchor-btn {
   transition: 1s;
 }
-/* button hover colour */
+/* button hover scale */
 .btn:hover, .btn-small:hover, .anchor-btn:hover {
   transform: scale(1.075);
 }
@@ -80,12 +80,6 @@ button, .anchor-btn {
 .col.m6 {
   width: calc(50% - 20px) !important;
   margin: 0 10px !important;
-}
-
-/* Center-align "View Recipe" links */
-.card-action a {
-  display: block;
-  text-align: center;
 }
 
 /* card scale/zoom */
@@ -105,15 +99,10 @@ max-width: 80%;
 /* Recipe Card Image */
 .card-image {
   max-width: 100%; 
-  max-height: 100%; 
+  max-height: auto; 
   display: flex;
   justify-content: center; 
   align-items: center;
-}
-
-.card-image img {
-  width: 100%; 
-  height: auto; 
 }
 
 /* text area on add-recipe form*/
